@@ -4,15 +4,16 @@ from . import timedelta
 from .common import (
     COLOR_SCHEMES, MODELACCESS, MODELHISTORY, MODELNAME, MODELNOTIFICATION,
     TRYTON_ICON, VIEW_SEARCH, IconFactory, Logout, RPCContextReload,
-    RPCException, RPCExecute, RPCProgress, Tooltips, apply_label_attributes,
-    ask, check_version, concurrency, data2pixbuf, date_format, ellipsize,
-    error, file_open, file_selection, file_write, filter_domain,
-    generateColorscheme, get_align, get_credentials, get_gdk_backend,
-    get_hostname, get_port, get_sensible_widget, get_toplevel_window, hex2rgb,
-    highlight_rgb, humanize, idle_add, mailto, message, node_attributes,
-    open_documentation, play_sound, process_exception, resize_pixbuf,
-    selection, setup_window, slugify, sur, sur_3b, timezoned_date, to_xml,
-    untimezoned_date, url_open, userwarning, warning)
+    RPCException, RPCExecute, RPCProgress, SolidColorFactory, Tooltips,
+    apply_label_attributes, ask, check_version, concurrency, data2pixbuf,
+    date_format, ellipsize, error, file_open, file_selection, file_write,
+    filter_domain, generateColorscheme, get_align, get_credentials,
+    get_gdk_backend, get_hostname, get_port, get_sensible_widget,
+    get_toplevel_window, hex2rgb, highlight_rgb, humanize, idle_add, mailto,
+    message, node_attributes, open_documentation, play_sound,
+    process_exception, resize_pixbuf, selection, setup_window, slugify, sur,
+    sur_3b, timezoned_date, to_xml, untimezoned_date, url_open, userwarning,
+    warning)
 from .domain_inversion import (
     concat, domain_inversion, eval_domain, extract_reference_models,
     filter_leaf, inverse_leaf, localize_domain, merge,
@@ -32,6 +33,7 @@ __all__ = [
     RPCException,
     RPCExecute,
     RPCProgress,
+    SolidColorFactory,
     TRYTON_ICON,
     Tooltips,
     VIEW_SEARCH,
