@@ -125,7 +125,7 @@ attlist.field &= [a:defaultValue = "square"] attribute border { "square" | "circ
 attlist.field &= [a:defaultValue = "0"] attribute visible { "0" | "1" }?
 image = element image { attlist.image, empty }
 attlist.image &= attribute name { text }
-attlist.image &= [a:defaultValue = "icon"] attribute type { "icon" | "url" }?
+attlist.image &= [a:defaultValue = "icon"] attribute type { "icon" | "url" | "color" }?
 attlist.image &= attribute url_size { text }?
 attlist.image &= [a:defaultValue = "square"] attribute border { "square" | "circle" | "rounded" }?
 attlist.image &= [ a:defaultValue = "1" ] attribute colspan { text }?
