@@ -80,7 +80,7 @@ suffix = element suffix { attlist.affix, empty }
 attlist.affix &= attribute string { text }?
 attlist.affix &= ( attribute name { text } | attribute id { text } )
 attlist.affix &= attribute icon { text }?
-attlist.affix &= [a:defaultValue = "icon"] attribute icon_type { "icon" | "url" }?
+attlist.affix &= [a:defaultValue = "icon"] attribute icon_type { "icon" | "url" | "color" }?
 attlist.affix &= attribute url_size { text }?
 attlist.affix &= [a:defaultValue = "square"] attribute border { "square" | "circle" | "rounded" }?
 button = element button { attlist.button, empty }
