@@ -1,3 +1,4 @@
+* Support color as type of icon and image
 * Support color widget on form view
 
 Version 7.4.0 - 2024-11-04
